# Bank

./: .gitignore  CMakeLists.txt  readme.md
src/: main.cpp  mian.cpp  queuesystem.cpp
